maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:2: error: Missing closing brace `}' assumed here
def hand() {
^IslandMaze:2: error: expected class or object definition
def hand() {
^IslandMaze:14: error: expected start of definition
override def run() {
         ^